# lemuri-session

./: CMakeLists.txt
src/: CMakeLists.txt  main.cpp  org.lemuri.session.unit.xml  org.lemuri.session.xml  sessioninterface.cpp  sessioninterface.h  sessionmanager.cpp  sessionmanager.h  unitlauncher.cpp  unitlauncher.h
